syntax = "proto3";

package signals;

option go_package = "./signals";

// TODO: These enums should be defined in a common file for all boards to use
enum SignalType {
  SIGNAL_TYPE_UNSPECIFIED = 0;
  SIGNAL_TYPE_DIGITAL = 1;
  SIGNAL_TYPE_ANALOG = 2;
}

enum SignalDirection {
  SIGNAL_DIRECTION_UNSPECIFIED = 0;
  SIGNAL_DIRECTION_INPUT = 1;
  SIGNAL_DIRECTION_OUTPUT = 2;
}

message SignalValue {
  message Digital {
    bool value = 1;
  }

  message Analog {
    float voltage = 1;
  }

  oneof value {
    Digital digital = 1;
    Analog analog = 2;
  }
}

message Signal {
  string ecu_name = 1;
  string signal_name = 2;
  SignalType type = 3;
  SignalDirection direction = 4;
}

message Request {
  Signal signal = 1;
  oneof request {
    ReadRequest read = 2;
    SetRequest set = 3;
    RegisterRequest register = 4;
  }
}

message ReadRequest {}
message RegisterRequest {}

message SetRequest {
  SignalValue value = 1;
}

message Response {
  oneof response {
    ReadResponse read = 1;
    SetResponse set = 2;
    RegisterResponse register = 3;
  }
}

message ReadResponse {
  bool ok = 1;
  SignalValue value = 2;
  string error = 3; // todo: is this needed?
}

message SetResponse {
  bool ok = 1;
  string error = 2;
}

message RegisterResponse {
  bool ok = 1;
  string error = 2;
}
